Enable builing on non-Windows platforms

--- a/Mechanism.Wpf.Core/Mechanism.Wpf.Core.csproj
+++ b/Mechanism.Wpf.Core/Mechanism.Wpf.Core.csproj
@@ -52,4 +52,10 @@
       <HintPath>..\..\System.Windows.Interactivity.dll</HintPath>
     </Reference>
   </ItemGroup>
+  
+  <ItemGroup>
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App" IsWindowsOnly="false" />
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WPF" IsWindowsOnly="false" />
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WindowsForms" IsWindowsOnly="false" />
+  </ItemGroup>
 </Project>
