--- a/Mechanism.Wpf.Showcase/Mechanism.Wpf.Showcase.csproj
+++ b/Mechanism.Wpf.Showcase/Mechanism.Wpf.Showcase.csproj
@@ -28,4 +28,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  
+  <ItemGroup>
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App" IsWindowsOnly="false" />
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WPF" IsWindowsOnly="false" />
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WindowsForms" IsWindowsOnly="false" />
+  </ItemGroup>
 </Project>
