--- a/Themes/Shale/Mechanism.Wpf.Styles.Shale.csproj
+++ b/Themes/Shale/Mechanism.Wpf.Styles.Shale.csproj
@@ -19,4 +19,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Mechanism.Wpf.Core\Mechanism.Wpf.Core.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App" IsWindowsOnly="false" />
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WPF" IsWindowsOnly="false" />
+	<KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WindowsForms" IsWindowsOnly="false" />
+  </ItemGroup>
 </Project>
